--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,246 +1,155 @@
+@import url("https://fonts.googleapis.com/css2?family=Exo&display=swap");
 .body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-}
-.main {
-  background-color: white;
-}
-
-.secure {
-  background-color: #64dd49;
-  color: white;
-}
-
-.messages {
-  float: right;
-}
-
-.section {
-  position: relative;
-  display: grid;
-  grid-template-columns: auto auto;
-  column-gap: 50px;
-  align-items: left;
-  justify-content: space-between;
-  min-height: 400px;
-  padding: 120px 20vw;
-}
-
-.gogolchat {
-  margin-left: -7vw;
-  width: min(70vw, 750px);
-}
-.gogolchat p {
-  font-size: 18px;
-}
-.gogolchat span {
-  font-size: 30px;
-  font-weight: 610;
+  min-height: 100vh;
+  width: 100%;
+  background-color: var(--background-color);
 }
 .header {
-  top: 5%;
-  padding-bottom: 20px;
-  padding-left: 0px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  height: 80px;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: var(--hightlighted-background-color);
 }
 .header ul {
-  font-size: 17px;
+  margin-top: 30px;
+  width: fit-content;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 20px;
   list-style-type: none;
-  margin: 0;
-  padding-inline-start: 45px;
-  padding-top: 35px;
-}
-
-.header ul li {
-  display: inline-block;
-}
-.login {
-  float: right;
-  margin-right: 5vw;
-}
-.register {
-  float: right;
+  align-content: flex-end;
 }
 .header ul li a {
+  border-radius: 5px;
+  padding: 10px 20px;
+  width: fit-content;
+  height: fit-content;
+  text-decoration: none;
+  color: var(--weak-text-color);
+}
+.header ul li:first-child a {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom: 2px solid white;
+  color: var(--strong-text-color);
+}
+.logo {
+  width: 180px;
+  height: 80px;
+  padding-left: 10px;
   position: relative;
-  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  align-content: flex-start;
+}
+.logoImage {
+  display: inline;
+  margin-top: 8px;
+}
+.logoText {
+  background-image: linear-gradient(to bottom, #f5c400, #f50000);
+  color: transparent !important;
+  background-clip: text;
+  -webkit-background-clip: text;
+  margin-top: 22px;
+  font-family: sans-serif;
+  font-size: 30px;
+  height: 80px;
+  display: inline-block;
+  width: 200px;
+  margin-left: 5px;
+}
+.heroImage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  height: 500px;
+  /* background-image: linear-gradient(to bottom right, rgb(138, 110, 0), rgb(146, 54, 0));
+    background-size: 600%; */
+  /* animation-name: movingGradient;
+    animation-duration: 10s;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite; */
+}
+.heroText {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  text-align: center;
+  color: var(--normal-text-color);
+  margin-bottom: 50px;
+}
+.heroText h1 {
+  color: var(--normal-text-color);
+  font-size: 60px;
+  font-family: sans-serif;
+  font-weight: 500;
+  margin: 0;
+}
+.heroText p {
+  color: rgb(215, 215, 215);
+}
+.btnGroup {
+  font-size: 0px;
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  justify-content: space-between;
+}
+.btnGroup .download {
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 130px;
+  height: 30px;
   text-decoration: none;
-  text-shadow: 2px 2px 5px rgba(128, 128, 128, 0.313);
-  color: black;
+  padding: 10px 20px;
+  background-image: linear-gradient(to bottom right, #f5c400, rgb(234, 74, 0));
+  color: var(--normal-text-color);
+  border-radius: 100px;
 }
-
-.header ul li a::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 1.5px;
-  border-radius: 5px;
-  background-color: black;
-  bottom: 0;
-  left: 0;
-  transform-origin: right;
-  transform: scaleX(0);
-  transition: transform 0.2s ease-in-out;
-}
-
-.header ul li a:hover::before {
-  transform-origin: left;
-  transform: scaleX(1);
-}
-.gogolchatbtn {
-  display: block;
-  width: 100px;
+.btnGroup .openInBrowser {
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 130px;
+  height: 30px;
   text-decoration: none;
-  color: white;
-  font-size: 18px;
-  border-radius: 5px;
-  background-image: linear-gradient(to top left, #2ae700, #1ea200);
-  margin-top: 10px;
-  padding: 13px 26px;
-  border: none;
+  padding: 10px 20px;
+  border: 3px solid #f5c400;
+  color: #f5c400;
+  border-radius: 100px;
+}
+.headerUl2 {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 15px;
+  width: fit-content;
+  margin-left: 70px;
+}
+.headerUl2 a {
   cursor: pointer;
-  transform: scale(1);
-  transition: transform 0.2s ease-in-out;
-}
-.gogolchatbtn:hover {
-  transform: scale(1.05);
-  transition: transform 0.2s ease-in-out !important;
-}
-.hiddenLeft {
-  opacity: 0;
-  transform: translateX(-100%);
-  transition: all 1s;
-}
-.showLeft {
-  opacity: 1;
-  transform: translateX(0);
-}
-.hiddenRight {
-  opacity: 0;
-  transform: translateX(100%);
-  transition: all 1s;
-}
-.showRight {
-  opacity: 1;
-  transform: translateX(0);
-}
-.hiddenTop {
-  opacity: 0;
-  transform: translateY(100%);
-  transition: all 1s;
-}
-.showTop {
-  opacity: 1;
-  transform: translateY(0);
-}
-.hiddenBottom {
-  opacity: 0;
-  transform: translateY(-100%);
-  transition: all 1s;
-}
-.showBottom {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.gogolbtn {
-  transition-delay: 200ms;
-}
-.description {
-  transition-delay: 400ms;
-}
-.gogolText {
-  transition-delay: 600ms;
-}
-.gogolImg {
-  transition-delay: 800ms;
-}
-
-.mobileWaves {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-  display: none;
-}
-.test {
-  background-color: yellow;
-}
-.hey {
-  color: white;
-}
-
-.wave1 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-  transform: rotate(180deg);
-}
-
-.wave1 svg {
-  position: relative;
-  display: block;
-  width: calc(100% + 1.3px);
-  height: 152px;
-}
-
-.wave1 .shapeFill {
-  fill: #64dd49;
-}
-.mobileWaves {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-  transform: rotate(180deg);
-}
-
-.mobileWaves svg {
-  position: relative;
-  display: block;
-  width: calc(131% + 1.3px);
-  height: 104px;
-}
-
-.mobileWaves .shapeFill {
-  fill: #64dd49;
-}
-
-@media only screen and (max-width: 768px) {
-  .header {
-    font-size: 16px;
-  }
-  .header ul {
-    padding-inline-start: 30px;
-  }
-  .gogolImg {
-    display: none;
-  }
-  .section {
-    padding: 8vh 20vw;
-    padding-bottom: 0px;
-  }
-  .mobileWaves {
-    display: block;
-  }
-  .wave1 {
-    display: none;
-  }
-  .login,
-  .register {
-    display: none !important;
-  }
-  .mobileLogin {
-    margin-right: 30px;
-    font-size: 18px;
-    visibility: visible !important;
-  }
+  color: var(--normal-text-color);
+  padding: 10px 20px;
+  border-radius: 50px;
+  border: 3px solid #f5c400;
+  text-decoration: none;
 }
