--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,66 @@
-label {
-  display: block;
-  margin-top: 15px;
-  margin-bottom: 5px;
+:root {
+  --strong-text-color: #ffff;
+  --normal-text-color: rgb(236, 236, 236);
+  --weak-text-color: rgb(175, 175, 175);
+  --background-color: #1e2025;
+  --hightlighted-background-color: #17191d;
+}
+html,
+body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  position: relative;
+}
+footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  box-sizing: border-box;
+  padding-top: 30px;
+  background-color: var(--hightlighted-background-color);
+  color: var(--normal-text-color);
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  bottom: 0px;
+}
+footer svg {
+  color: var(--normal-text-color);
+  margin-left: 10px;
+  font-size: 20px;
+}
+.backdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #000000a0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal {
+  width: clamp(50%, 700px, 90%);
+  height: auto;
+}
+.alert {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+  padding: 10px 10px;
+  border-radius: 5px;
+  color: #f8d7da;
+  background-color: #ab0011;
+  z-index: 1;
+  position: absolute;
+  top: 7%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.alert svg {
+  font-size: 13px;
 }
