Make sidebar scrollbar's track (background) transparent

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,11 +10,17 @@
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
   width: 12px;
+  border-radius: 999px;
 }
 
 *::-webkit-scrollbar-track {
   background: #282b30;
   border-radius: 999px;
+}
+
+.scrollbar-transparent::-webkit-scrollbar-track {
+  background: transparent !important;
+  border-radius: 999px !important;
 }
 
 *::-webkit-scrollbar-thumb {
